Fix(mobile): Fix viewport on mobile ? (test02)

--- a/src/styles/views.scss
+++ b/src/styles/views.scss
@@ -12,11 +12,6 @@
         &::after {
             top: 50px;
             bottom: 51px;
-
-            @include mobile-only {
-                top: 51px;
-                bottom: 101px;
-            }
         }
 
         .home-subcontainer {
